# energy-planner

./: .dockerignore  Cargo.toml  Dockerfile  config.yaml  repository.yaml  run.sh
.github/workflows/: ci.yml  publish-ghcr.yml
examples/: ws.rs
src/: epex_prediction_client.rs  lib.rs  main.rs  optimizer.rs  plot.rs  server.rs  types.rs
src/consumption_forecast/: inference.rs  mod.rs  training.rs  utils.rs
src/home_assistant/: addon.rs  client.rs  mod.rs  types.rs  web_socket.rs
templates/: index.html  plan_content.html  plan_overview_content.html  plot_content.html
