[package]
name = "energy-planner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.15.6"
axum = { version = "0.8.8", features = ["macros"] }
futures = "0.3.32"
good_lp = { version = "1.14.2", default-features = false, features = ["highs"] }
itertools = "0.14.0"
jiff = { version = "0.2.18", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = "0.29.0"
plotly = { version = "0.14.0" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
